--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/composition-api": "^0.32.0",
+    "@pinia/nuxt": "^0.1.8",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "pinia": "^2.0.13",
