--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@nuxtjs/composition-api": "^0.32.0",
     "@pinia/nuxt": "^0.1.8",
+    "chance": "^1.1.8",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "pinia": "^2.0.13",
+    "random": "^3.0.6",
+    "random-js": "^2.1.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
